[gd_scene load_steps=6 format=3 uid="uid://biapgh26sgkca"]

[ext_resource type="Texture2D" uid="uid://c13mgihwjpqy7" path="res://assets/ui/profile/link.svg" id="1_3knha"]
[ext_resource type="StyleBox" uid="uid://cocacywor1hkb" path="res://src/ui/components/profile/profile_link_button_normal.tres" id="1_j0r87"]
[ext_resource type="Script" uid="uid://c7ktnujnnsko8" path="res://src/ui/components/profile/profile_link_button.gd" id="2_j0r87"]
[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="3_3knha"]
[ext_resource type="Texture2D" uid="uid://dt2en45rqmrsa" path="res://assets/themes/dark_dcl_theme/icons/Exit.svg" id="4_r8w7o"]

[node name="PofileLinkButton" type="Button"]
custom_minimum_size = Vector2(0, 45)
offset_right = 133.0
offset_bottom = 42.0
theme_override_colors/font_hover_color = Color(0.341176, 0.760784, 1, 1)
theme_override_colors/font_color = Color(0.341176, 0.760784, 1, 1)
theme_override_colors/font_focus_color = Color(0.341176, 0.760784, 1, 1)
theme_override_colors/font_pressed_color = Color(0.341176, 0.760784, 1, 1)
theme_override_constants/h_separation = 9
theme_override_constants/icon_max_width = 20
theme_override_styles/hover_pressed = ExtResource("1_j0r87")
theme_override_styles/hover = ExtResource("1_j0r87")
theme_override_styles/pressed = ExtResource("1_j0r87")
theme_override_styles/normal = ExtResource("1_j0r87")
text = "LINK LABEL"
icon = ExtResource("1_3knha")
script = ExtResource("2_j0r87")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_right = 5
metadata/_edit_lock_ = true

[node name="Button_Remove" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("3_3knha")
theme_type_variation = &"BlackButton"
theme_override_constants/icon_max_width = 20
icon = ExtResource("4_r8w7o")
icon_alignment = 1
expand_icon = true

[connection signal="change_editing" from="." to="." method="_on_change_editing"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Button_Remove" to="." method="_on_button_remove_pressed"]
